--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -29,11 +29,19 @@
 	<dict>
 		<key>LBDefaultScript</key>
 		<dict>
+			<key>LBAcceptedArgumentTypes</key>
+			<array>
+				<string>string</string>
+			</array>
+			<key>LBRequiresArgument</key>
+			<true/>
 			<key>LBResultType</key>
 			<string>unknown</string>
 			<key>LBScriptName</key>
 			<string>default.js</string>
 		</dict>
 	</dict>
+	<key>LBTextInputTitle</key>
+	<string>Enter a login or login/repository</string>
 </dict>
 </plist>
