Return results with icons

--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -33,10 +33,14 @@
 			<array>
 				<string>string</string>
 			</array>
+			<key>LBKeepWindowActive</key>
+			<true/>
 			<key>LBRequiresArgument</key>
 			<true/>
 			<key>LBResultType</key>
 			<string>unknown</string>
+			<key>LBReturnsResult</key>
+			<true/>
 			<key>LBScriptName</key>
 			<string>default.js</string>
 		</dict>
