Force mocha to use strict for CI

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A LaunchBar action to find resources on GitHub.",
   "main": "Contents/Scripts/default.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --use_strict"
   },
   "repository": {
     "type": "git",
