--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A LaunchBar action to find resources on GitHub.",
   "main": "Contents/Scripts/default.js",
   "scripts": {
-    "test": "mocha --use_strict"
+    "test": "mocha --use_strict",
+    "build": "rm Contents/Scripts/compiled-default.js; babel Contents/Scripts/default.js Contents/Scripts/ --presets es2015 --out-file Contents/Scripts/compiled-default.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,8 @@
   },
   "homepage": "https://github.com/bswinnerton/github.lbaction#readme",
   "devDependencies": {
+    "babel-cli": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
     "mocha": "^3.2.0"
   }
 }
