--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A LaunchBar action to find resources on GitHub.",
   "main": "Contents/Scripts/default.js",
   "scripts": {
-    "test": "mocha --use_strict",
-    "build": "rm Contents/Scripts/bundle.js; babel Contents/Scripts/default.js Contents/Scripts/ --presets es2015 --out-file Contents/Scripts/bundle.js"
+    "test": "script/test",
+    "build": "script/build",
+    "server": "script/server"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,8 @@
   "devDependencies": {
     "babel-cli": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
+    "gulp": "^3.9.1",
+    "gulp-shell": "^0.5.2",
     "mocha": "^3.2.0"
   }
 }
