--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -35,6 +35,8 @@
 			</array>
 			<key>LBKeepWindowActive</key>
 			<true/>
+			<key>LBLiveFeedbackEnabled</key>
+			<true/>
 			<key>LBRequiresArgument</key>
 			<true/>
 			<key>LBResultType</key>
