--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -42,7 +42,7 @@
 			<key>LBReturnsResult</key>
 			<true/>
 			<key>LBScriptName</key>
-			<string>bundle.js</string>
+			<string>bundle.min.js</string>
 		</dict>
 	</dict>
 	<key>LBTextInputTitle</key>
